name:               blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base      >= 4.6  && < 5
                  , hakyll    >= 4.10 && < 4.13
                  , filepath  >= 1.3  && < 1.5
                  , pandoc    >= 2.0  && < 2.3
  ghc-options:      -threaded
  default-language: Haskell2010
